--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "Ap.js",
   "scripts": {
     "test": "jest",
-    "start": "parcel swggy.html",
-    "build": "parcel  swggy.html"
+    "start": "parcel  swggy.html",
+    "build": "parcel build swggy.html"
   },
   "author": "Abhi",
   "license": "ISC",
