Add build script to package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "this is react",
   "main": "Ap.js",
- 
+  "scripts": {
+    "test": "jest",
+     "start": "parcel index.html",
+  "build": "parcel build index.html"
+  },
   "author": "Abhi",
   "license": "ISC",
   "devDependencies": {
