--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "test": "jest",
      "start": "parcel swggy.html",
-  "build": "parcel swggy.html",
+  "build": "npx parcel swggy.html",
   "postinstall": "chmod -R 755 ./node_modules"
   },
   "author": "Abhi",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.13.0",
+    
     "process": "^0.11.10"
   },
   "dependencies": {
+    "parcel": "^2.13.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
